--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "babel-register": "^6.26.0",
     "ganache-cli": "^6.1.0",
     "solidity-coverage": "^0.4.15",
-    "truffle": "4.1.6",
+    "truffle": "4.1.8",
     "truffle-hdwallet-provider": "^0.0.3",
     "truffle-provider": "^0.0.4"
   },
   "dependencies": {
-    "zeppelin-solidity": "^1.8.0"
+    "openzeppelin-solidity": "^1.9.0",
+    "@acatalan/erc223-20-contracts": "^0.0.1"
+    
+
   },
   "babel": {
     "presets": [
