--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "compile": "./node_modules/.bin/truffle compile",
     "test": "./node_modules/.bin/truffle test",
+    "flattener": "./node_modules/.bin/truffle-flattener",
     "migrate": "./node_modules/.bin/truffle migrate --network in_memory",
     "deploy-rinkeby": "./node_modules/.bin/truffle migrate --network rinkeby",
     "deploy-ropsten": "./node_modules/.bin/truffle migrate --network ropsten",
+    "deploy-kovan": "./node_modules/.bin/truffle migrate --network kovan",
     "coverage": "solidity-coverage"
   },
   "devDependencies": {
@@ -18,14 +20,13 @@
     "ganache-cli": "^6.1.0",
     "solidity-coverage": "^0.4.15",
     "truffle": "4.1.8",
+    "truffle-flattener": "^1.2.5",
     "truffle-hdwallet-provider": "^0.0.3",
     "truffle-provider": "^0.0.4"
   },
   "dependencies": {
-    "openzeppelin-solidity": "^1.9.0",
-    "@acatalan/erc223-20-contracts": "^0.0.1"
-    
-
+    "@acatalan/erc223-20-contracts": "^0.0.2",
+    "openzeppelin-solidity": "^1.9.0"
   },
   "babel": {
     "presets": [
